--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ httpx==0.26.0
 cryptography==42.0.0
 bcrypt==4.1.2
 slowapi==0.1.9
+aiosmtplib==3.0.1
 pytest==8.0.0
 pytest-cov==4.1.0
 pytest-asyncio==0.23.0
