--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cryptography==42.0.0
 bcrypt==4.1.2
 slowapi==0.1.9
 aiosmtplib==3.0.1
+resend==2.0.0
 email-validator==2.1.0
 pytest==8.0.0
 pytest-cov==4.1.0
