Make TX power optional - QSOs without power still count for QSO Race
- Remove TX power requirement from validate_qso_for_mode
- QSOs without power count for QSO Race (first to log)
- QSOs without power are excluded from Cool Factor competition
- Filter out zero cool_factor when awarding Cool Factor medals

--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,6 @@
 # fly.toml - Fly.io configuration for Ham Radio Olympics
 
-app = "your clubs callsign here"
+app = "kd5dx"
 primary_region = "iad"
 
 [build]
