Multiple improvements: two-fer support, favicons, and deployment cleanup
- Fix two-fer bug: QSOs from same contact at multiple parks now stored separately
  - Updated unique index to include my_sig_info (park ID)
  - Updated deduplication logic to preserve distinct park entries
  - Added database migration for existing deployments

- Add generic Ham Radio Olympics favicons (gold medal with radio tower)
  - Created favicon.ico, favicon.svg, and PNG icons at multiple sizes
  - Updated base.html with proper favicon references

- Remove deployment-specific references from codebase
  - Added APP_BASE_URL config option (defaults to localhost)
  - email_service.py and scripts now use config instead of hardcoded URL
  - Moved fly.toml to fly.toml.example with generic placeholders
  - Added fly.toml to .gitignore

- Fix logout redirect to go to events page instead of signup

- Fix QSO filter datetime formatting to use user preferences in AJAX responses

--- a/fly.toml.example
+++ b/fly.toml.example
@@ -1,7 +1,8 @@
 # fly.toml - Fly.io configuration for Ham Radio Olympics
+# Copy this file to fly.toml and customize for your deployment
 
-app = "kd5dx"
-primary_region = "iad"
+app = "your-app-name"
+primary_region = "iad"  # Change to your preferred region
 
 [build]
   dockerfile = "Dockerfile"
@@ -35,5 +36,5 @@ primary_region = "iad"
     soft_limit = 20
 
 [mounts]
-  source = "ham_olympics_data"
+  source = "your_volume_name"  # Create with: fly volumes create your_volume_name --size 1
   destination = "/data"
