Change PWA short name from HRO to Radio Olympics

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Ham Radio Olympics",
-  "short_name": "HRO",
+  "short_name": "Radio Olympics",
   "description": "Olympic-style amateur radio competition",
   "start_url": "/",
   "display": "standalone",
