--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,24 +1,150 @@
 {
+  "id": "ham-radio-olympics",
   "name": "Ham Radio Olympics",
   "short_name": "Radio Olympics",
-  "description": "Olympic-style amateur radio competition",
+  "description": "Olympic-style amateur radio competition tracking. Sync QSOs from QRZ/LoTW, compete for medals in Distance and Cool Factor categories, and track your personal bests.",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
+  "display_override": ["standalone", "minimal-ui"],
   "background_color": "#1a365d",
   "theme_color": "#1a365d",
-  "orientation": "portrait-primary",
+  "orientation": "any",
+  "categories": ["sports", "social", "utilities"],
+  "lang": "en-US",
+  "dir": "ltr",
   "icons": [
+    {
+      "src": "/static/icon-48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/static/icon-72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/static/icon-96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/static/icon-128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/static/icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/static/icon-152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any"
+    },
     {
       "src": "/static/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/static/icon-384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/static/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/static/icon-maskable-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/static/icon-maskable-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
-  ]
+  ],
+  "shortcuts": [
+    {
+      "name": "Dashboard",
+      "short_name": "Dashboard",
+      "description": "View your medals, QSOs, and sync status",
+      "url": "/dashboard",
+      "icons": [{"src": "/static/icon-96.png", "sizes": "96x96"}]
+    },
+    {
+      "name": "Sync QSOs",
+      "short_name": "Sync",
+      "description": "Sync your latest QSOs from QRZ",
+      "url": "/dashboard#sync",
+      "icons": [{"src": "/static/icon-96.png", "sizes": "96x96"}]
+    },
+    {
+      "name": "Leaderboards",
+      "short_name": "Standings",
+      "description": "View current competition standings",
+      "url": "/olympiad/sports",
+      "icons": [{"src": "/static/icon-96.png", "sizes": "96x96"}]
+    },
+    {
+      "name": "World Records",
+      "short_name": "Records",
+      "description": "See distance and cool factor records",
+      "url": "/records",
+      "icons": [{"src": "/static/icon-96.png", "sizes": "96x96"}]
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/static/screenshots/dashboard-wide.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Dashboard showing medals and QSO log"
+    },
+    {
+      "src": "/static/screenshots/dashboard-narrow.png",
+      "sizes": "540x720",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Mobile dashboard view"
+    }
+  ],
+  "share_target": {
+    "action": "/share-target",
+    "method": "POST",
+    "enctype": "application/x-www-form-urlencoded",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  },
+  "protocol_handlers": [
+    {
+      "protocol": "web+hamradio",
+      "url": "/handle-protocol?data=%s"
+    }
+  ],
+  "handle_links": "preferred",
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  }
 }
