Document auto-deploy setup, add changelog, remove personal references
- Add auto-deploy docs to README, User Guide (section 10.4), and fly.toml.example
- Add v1.2.1 changelog entry covering recent fixes and auto-deploy
- Replace personal callsigns and URLs with generic placeholders in docs,
  tests, code comments, and notifications default URL
- Regenerate user guide HTML and PDF

--- a/fly.toml.example
+++ b/fly.toml.example
@@ -1,5 +1,8 @@
 # fly.toml - Fly.io configuration for Ham Radio Olympics
 # Copy this file to fly.toml and customize for your deployment
+#
+# Auto-deploy: This file must be committed to git for GitHub Actions
+# auto-deploy to work. See docs/README.md for setup instructions.
 
 app = "your-app-name"
 primary_region = "iad"  # Change to your preferred region
